syntax = "proto3";

package analytics;

option go_package = "github.com/playkaro/backend/proto/analytics";

service AnalyticsService {
  rpc LogEvent (LogEventRequest) returns (LogEventResponse);
}

message LogEventRequest {
  string user_id = 1;
  string event_type = 2;
  string event_data_json = 3;
  string timestamp = 4;
}

message LogEventResponse {
  bool success = 1;
  string message = 2;
}
